--- a/solutions/ai-chatgpt/.env.example
+++ b/solutions/ai-chatgpt/.env.example
@@ -1,5 +1,5 @@
 # Created by Vercel CLI
-OPENAI_API_KEY=
+OPENAI_API_KEY=sSvzLAxZjHKaMu7PC132T3BlbkFJKp2AcRhaPgKxlEwp017Y
 # The temperature controls how much randomness is in the output
 AI_TEMP=0.7
 # The size of the response
